test ajout defer et asynch scripts

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,9 +19,13 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Création Site Web - Mike LOCKS</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <script src="path/to/app.js" defer></script>
 </body>
 </html>
